# xoltar.org

./: .gitignore  about.rst  contact.markdown  index.html  site.hs  xoltar-org.cabal
css/: erudite.css  xoltar.css
posts/: 2012-12-07-tu-quoque.markdown  2015-07-09-hakyll.markdown  2015-07-15-hott-resources.markdown  2016-04-21-mac-os-x-native.markdown  2016-05-03-mac-os-x-native-2.markdown  2016-06-27-python-class-properties.markdown  2018-03-01-smm-poster.markdown
templates/: default.html  post-leads.html  post.html
